5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4488/executions/1671_1105.log
== TEST (2019-04-28 15:02:37) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input("descricao do brasao")
print("Entrada:", x)
if(x==lobo):
 print("Casa: Stark")
elif(x==leao)
 print("Casa: Lannister")
elif(x==veado)
 print("Casa: Baratheon")
elif(x==dragao)
 print("Casa: Targaryen")
elif(x==rosa)
 print("Casa: Tyrell")
elif(x==sol)
 print("Casa: Martell")
elif(x==lula)
 print("Casa: Greyjoy")
elif(x==esfolado)
 print("Casa: Bolton")
elif(x==turta)
 print("Casa: Tully")
else:
 print("Brasao: Invalido")
-- ERROR:
File "XXXX", line 7
    elif(x==leao)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 15:02:40) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input("descricao do brasao")
print("Entrada:", x)
if(x==lobo):
 print("Casa: Stark")
elif(x==leao)
 print("Casa: Lannister")
elif(x==veado)
 print("Casa: Baratheon")
elif(x==dragao)
 print("Casa: Targaryen")
elif(x==rosa)
 print("Casa: Tyrell")
elif(x==sol)
 print("Casa: Martell")
elif(x==lula)
 print("Casa: Greyjoy")
elif(x==esfolado)
 print("Casa: Bolton")
elif(x==turta)
 print("Casa: Tully")
else:
 print("Brasao: Invalido")
-- EXECUTION TIME:
0.193662
-- ERROR:
  File "/home/codebench/codes/1671/1105/main.py", line 7
    elif(x==leao)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:02:52) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input("descricao do brasao")
print("Entrada:", x)
if(x==lobo):
 print("Casa: Stark")
elif(x==leao)
 print("Casa: Lannister")
elif(x==veado)
 print("Casa: Baratheon")
elif(x==dragao)
 print("Casa: Targaryen")
elif(x==rosa)
 print("Casa: Tyrell")
elif(x==sol)
 print("Casa: Martell")
elif(x==lula)
 print("Casa: Greyjoy")
elif(x==esfolado)
 print("Casa: Bolton")
elif(x==turta)
 print("Casa: Tully")
else:
 print("Brasao Invalido")
-- ERROR:
File "XXXX", line 7
    elif(x==leao)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 15:02:54) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input("descricao do brasao")
print("Entrada:", x)
if(x==lobo):
 print("Casa: Stark")
elif(x==leao)
 print("Casa: Lannister")
elif(x==veado)
 print("Casa: Baratheon")
elif(x==dragao)
 print("Casa: Targaryen")
elif(x==rosa)
 print("Casa: Tyrell")
elif(x==sol)
 print("Casa: Martell")
elif(x==lula)
 print("Casa: Greyjoy")
elif(x==esfolado)
 print("Casa: Bolton")
elif(x==turta)
 print("Casa: Tully")
else:
 print("Brasao Invalido")
-- EXECUTION TIME:
0.12441
-- ERROR:
  File "/home/codebench/codes/1671/1105/main.py", line 7
    elif(x==leao)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 15:03:07) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input("descricao do brasao")
print("Entrada:", x)
if(x==lobo):
 print("Casa: Stark")
elif(x==leao)
 print("Casa: Lannister")
elif(x==veado)
 print("Casa: Baratheon")
elif(x==dragao)
 print("Casa: Targaryen")
elif(x==rosa)
 print("Casa: Tyrell")
elif(x==sol)
 print("Casa: Martell")
elif(x==lula)
 print("Casa: Greyjoy")
elif(x==esfolado)
 print("Casa: Bolton")
elif(x==turta)
 print("Casa: Tully")
else:
 print("Brasao invalido")
-- EXECUTION TIME:
0.1511
-- ERROR:
  File "/home/codebench/codes/1671/1105/main.py", line 7
    elif(x==leao)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:03:15) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input("descricao do brasao")
print("Entrada:", x)
if(x==lobo):
 print("Casa: Stark")
elif(x==leao)
 print("Casa: Lannister")
elif(x==veado)
 print("Casa: Baratheon")
elif(x==dragao)
 print("Casa: Targaryen")
elif(x==rosa)
 print("Casa: Tyrell")
elif(x==sol)
 print("Casa: Martell")
elif(x==lula)
 print("Casa: Greyjoy")
elif(x==esfolado)
 print("Casa: Bolton")
elif(x==turta)
 print("Casa: Tully")
else:
 print("Brasao invalido")
-- ERROR:
File "XXXX", line 7
    elif(x==leao)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 15:03:31) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input("descricao do brasao")
print("Entrada:", x)
if(x==lobo):
 print("Casa: Stark")
elif(x==leao)
 print("Casa: Lannister")
elif(x==veado)
 print("Casa: Baratheon")
elif(x==dragao)
 print("Casa: Targaryen")
elif(x==rosa)
 print("Casa: Tyrell")
elif(x==sol)
 print("Casa: Martell")
elif(x==lula)
 print("Casa: Greyjoy")
elif(x==esfolado)
 print("Casa: Bolton")
elif(x==turta)
 print("Casa: Tully")
else:
 print("Brasao invalido")
-- EXECUTION TIME:
0.294511
-- ERROR:
  File "/home/codebench/codes/1671/1105/main.py", line 7
    elif(x==leao)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:03:32) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input("descricao do brasao")
print("Entrada:", x)
if(x==lobo):
 print("Casa: Stark")
elif(x==leao)
 print("Casa: Lannister")
elif(x==veado)
 print("Casa: Baratheon")
elif(x==dragao)
 print("Casa: Targaryen")
elif(x==rosa)
 print("Casa: Tyrell")
elif(x==sol)
 print("Casa: Martell")
elif(x==lula)
 print("Casa: Greyjoy")
elif(x==esfolado)
 print("Casa: Bolton")
elif(x==turta)
 print("Casa: Tully")
else:
 print("Brasao invalido")
-- ERROR:
File "XXXX", line 7
    elif(x==leao)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 15:04:46) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input("descricao do brasao")
print("Entrada:", x)
if(x==lobo):
 print("Casa: Stark")
elif(x==leao):
 print("Casa: Lannister")
elif(x==veado):
 print("Casa: Baratheon")
elif(x==dragao):
 print("Casa: Targaryen")
elif(x==rosa):
 print("Casa: Tyrell")
elif(x==sol):
 print("Casa: Martell")
elif(x==lula):
 print("Casa: Greyjoy")
elif(x==esfolado):
 print("Casa: Bolton")
elif(x==turta):
 print("Casa: Tully")
else:
 print("Brasao invalido")
-- EXECUTION TIME:
0.16547
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 5, in <module>
    if(x==lobo):
NameError: name 'lobo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:04:47) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input("descricao do brasao")
print("Entrada:", x)
if(x==lobo):
 print("Casa: Stark")
elif(x==leao):
 print("Casa: Lannister")
elif(x==veado):
 print("Casa: Baratheon")
elif(x==dragao):
 print("Casa: Targaryen")
elif(x==rosa):
 print("Casa: Tyrell")
elif(x==sol):
 print("Casa: Martell")
elif(x==lula):
 print("Casa: Greyjoy")
elif(x==esfolado):
 print("Casa: Bolton")
elif(x==turta):
 print("Casa: Tully")
else:
 print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(x==lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 15:05:05) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input("descricao do brasao:")
print("Entrada:", x)
if(x==lobo):
 print("Casa: Stark")
elif(x==leao):
 print("Casa: Lannister")
elif(x==veado):
 print("Casa: Baratheon")
elif(x==dragao):
 print("Casa: Targaryen")
elif(x==rosa):
 print("Casa: Tyrell")
elif(x==sol):
 print("Casa: Martell")
elif(x==lula):
 print("Casa: Greyjoy")
elif(x==esfolado):
 print("Casa: Bolton")
elif(x==turta):
 print("Casa: Tully")
else:
 print("Brasao invalido")
-- EXECUTION TIME:
0.164403
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 5, in <module>
    if(x==lobo):
NameError: name 'lobo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:05:06) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input("descricao do brasao:")
print("Entrada:", x)
if(x==lobo):
 print("Casa: Stark")
elif(x==leao):
 print("Casa: Lannister")
elif(x==veado):
 print("Casa: Baratheon")
elif(x==dragao):
 print("Casa: Targaryen")
elif(x==rosa):
 print("Casa: Tyrell")
elif(x==sol):
 print("Casa: Martell")
elif(x==lula):
 print("Casa: Greyjoy")
elif(x==esfolado):
 print("Casa: Bolton")
elif(x==turta):
 print("Casa: Tully")
else:
 print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(x==lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:07:16) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input("descricao do brasao:")
print("Entrada:", x)
if(x=="lobo"):
 print("Casa: Stark")
elif(x=="leao"):
 print("Casa: Lannister")
elif(x=="veado"):
 print("Casa: Baratheon")
elif(x=="dragao"):
 print("Casa: Targaryen")
elif(x=="rosa"):
 print("Casa: Tyrell")
elif(x=="sol"):
 print("Casa: Martell")
elif(x=="lula"):
 print("Casa: Greyjoy")
elif(x=="esfolado"):
 print("Casa: Bolton")
elif(x=="turta"):
 print("Casa: Tully")
else:
 print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 15:07:18) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input("descricao do brasao:")
print("Entrada:", x)
if(x=="lobo"):
 print("Casa: Stark")
elif(x=="leao"):
 print("Casa: Lannister")
elif(x=="veado"):
 print("Casa: Baratheon")
elif(x=="dragao"):
 print("Casa: Targaryen")
elif(x=="rosa"):
 print("Casa: Tyrell")
elif(x=="sol"):
 print("Casa: Martell")
elif(x=="lula"):
 print("Casa: Greyjoy")
elif(x=="esfolado"):
 print("Casa: Bolton")
elif(x=="turta"):
 print("Casa: Tully")
else:
 print("Brasao invalido")
-- EXECUTION TIME:
0.173818
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:07:21) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input("descricao do brasao:")
print("Entrada:", x)
if(x=="lobo"):
 print("Casa: Stark")
elif(x=="leao"):
 print("Casa: Lannister")
elif(x=="veado"):
 print("Casa: Baratheon")
elif(x=="dragao"):
 print("Casa: Targaryen")
elif(x=="rosa"):
 print("Casa: Tyrell")
elif(x=="sol"):
 print("Casa: Martell")
elif(x=="lula"):
 print("Casa: Greyjoy")
elif(x=="esfolado"):
 print("Casa: Bolton")
elif(x=="turta"):
 print("Casa: Tully")
else:
 print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:07:22) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input("descricao do brasao:")
print("Entrada:", x)
if(x=="lobo"):
 print("Casa: Stark")
elif(x=="leao"):
 print("Casa: Lannister")
elif(x=="veado"):
 print("Casa: Baratheon")
elif(x=="dragao"):
 print("Casa: Targaryen")
elif(x=="rosa"):
 print("Casa: Tyrell")
elif(x=="sol"):
 print("Casa: Martell")
elif(x=="lula"):
 print("Casa: Greyjoy")
elif(x=="esfolado"):
 print("Casa: Bolton")
elif(x=="turta"):
 print("Casa: Tully")
else:
 print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:07:38) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input("descricao do brasao:")
print("Entrada:", x)
if(x=="lobo"):
 print("Casa: Stark")
elif(x=="leao"):
 print("Casa: Lannister")
elif(x=="veado"):
 print("Casa: Baratheon")
elif(x=="dragao"):
 print("Casa: Targaryen")
elif(x=="rosa"):
 print("Casa: Tyrell")
elif(x=="sol"):
 print("Casa: Martell")
elif(x=="lula"):
 print("Casa: Greyjoy")
elif(x=="esfolado"):
 print("Casa: Bolton")
elif(x=="turta"):
 print("Casa: Tully")
else:
 print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
